conformance/base/admin_tier/hairpin-rules.yaml
apiVersion: v1
kind: Service
metadata:
  name: harry-potter-hairpin-service
  namespace: network-policy-conformance-gryffindor
spec:
  selector:
    conformance-house: gryffindor
  ports:
  - name: web
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: hairpin-ingress-deny
spec:
  tier: Admin
  priority: 15
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  ingress:
  - name: "deny-gryffindor-ingress"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
