conformance/base/admin_tier/same-priority-2.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: same-priority-2
spec:
  tier: Admin
  priority: 15
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
  ingress:
  - name: "allow-from-slytherin"
    action: "Accept"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-slytherin
  - name: "deny-all-else"
    action: "Deny"
    from:
    - namespaces:
        matchLabels: {}
