conformance/base/admin_tier/standard-egress-sctp-port-range-rules.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: egress-sctp-port-range
spec:
  tier: Admin
  priority: 8
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: network-policy-conformance-durmstrang
  egress:
  - name: "allow-to-hufflepuff-at-port-range-9003-9005"
    action: "Accept"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    protocols:
      - sctp:
          destinationPort:
            range:
              start: 9003
              end: 9005
  - name: "deny-to-hufflepuff-everything-else"
    action: "Deny"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
