conformance/base/admin_tier/standard-egress-sctp-rules.yaml
apiVersion: policy.networking.k8s.io/v1beta1
kind: ClusterNetworkPolicy
metadata:
  name: egress-sctp
spec:
  tier: Admin
  priority: 8
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  egress:
  - name: "allow-to-gryffindor-everything"
    action: "Accept"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  - name: "deny-to-gryffindor-everything"
    action: "Deny"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  - name: "pass-to-gryffindor-everything"
    action: "Pass"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  - name: "deny-to-slytherin-at-port-9003"
    action: "Deny"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-slytherin
    protocols:
      - sctp:
          destinationPort:
            number: 9003
  - name: "pass-to-slytherin-at-port-9003"
    action: "Pass"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-slytherin
    protocols:
      - sctp:
          destinationPort:
            number: 9003
  - name: "allow-to-hufflepuff-at-port-9003"
    action: "Accept"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    protocols:
      - sctp:
          destinationPort:
            number: 9003
  - name: "deny-to-hufflepuff-everything-else"
    action: "Deny"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
