conformance/base/admin_tier/standard-egress-udp-port-range-rules.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: egress-udp-port-range
spec:
  tier: Admin
  priority: 7
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: network-policy-conformance-durmstrang
  egress:
  - name: "allow-to-gryffindor-at-port-range-53-5353"
    action: "Accept"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
    protocols:
      - udp:
          destinationPort:
            range:
              start: 53
              end: 5353
  - name: "deny-to-gryffindor-everything-else"
    action: "Deny"
    to:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
