conformance/base/admin_tier/standard-gress-omitted-namespaceselector.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: gress-omitted-namespaceselector
spec:
  tier: Admin
  priority: 3
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-durmstrang
  ingress:
  - name: "deny-from-all-conformance-pods"
    action: "Deny"
    from:
    - pods:
        podSelector:
          matchExpressions:
          - key: conformance-house
            operator: Exists
