conformance/base/admin_tier/standard-ingress-sctp-port-range-rules.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: ingress-sctp-port-range
spec:
  tier: Admin
  priority: 8
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: network-policy-conformance-durmstrang
  ingress:
  - name: "allow-from-hufflepuff-at-port-range-9003-9005"
    action: "Accept"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    protocols:
      - sctp:
          destinationPort:
            range:
              start: 9003
              end: 9005
  - name: "deny-from-hufflepuff-everything-else"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
