conformance/base/admin_tier/standard-ingress-tcp-port-range-rules.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: ingress-tcp-port-range
spec:
  tier: Admin
  priority: 3
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: network-policy-conformance-durmstrang
  ingress:
  - name: "allow-from-hufflepuff-at-port-range-80-8080"
    action: "Accept"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    protocols:
      - tcp:
          destinationPort:
            range:
              start: 80
              end: 8080
  - name: "deny-from-hufflepuff-everything-else"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
