conformance/base/admin_tier/standard-ingress-udp-port-range-rules.yaml
apiVersion: policy.networking.k8s.io/v1alpha2
kind: ClusterNetworkPolicy
metadata:
  name: ingress-udp-port-range
spec:
  tier: Admin
  priority: 7
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: network-policy-conformance-durmstrang
  ingress:
  - name: "allow-from-hufflepuff-at-port-range-53-5353"
    action: "Accept"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    protocols:
      - udp:
          destinationPort:
            range:
              start: 53
              end: 5353
  - name: "deny-from-hufflepuff-everything-else"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
