conformance/base/admin_tier/standard-priority-field.yaml
apiVersion: policy.networking.k8s.io/v1beta1
kind: ClusterNetworkPolicy
metadata:
  name: priority-50-example
spec:
  tier: Admin
  priority: 50
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "deny-all-ingress-from-slytherin"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
  egress:
  - name: "deny-all-egress-to-slytherin"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
---
apiVersion: policy.networking.k8s.io/v1beta1
kind: ClusterNetworkPolicy
metadata:
  name: old-priority-60-new-priority-40-example
spec:
  tier: Admin
  priority: 60 # will be updated to 40 in the tests thus taking higher precedence over the deny at priority 50
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "pass-all-ingress-from-slytherin"
    action: "Pass"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
  egress:
  - name: "pass-all-egress-to-slytherin"
    action: "Pass"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
---
apiVersion: policy.networking.k8s.io/v1beta1
kind: ClusterNetworkPolicy
metadata:
  name: default
spec:
  tier: Baseline
  priority: 10
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  ingress:
  - name: "allow-all-ingress-from-slytherin"
    action: "Accept"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
  egress:
  - name: "allow-all-egress-to-slytherin"
    action: "Accept"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
